pythonProject/learn-terraform-docker-container/learn-terraform-aws-instance/security_group.tf
# Security Group for HTTP and SSH
resource "aws_security_group" "first_sg" {
  name        = "first_sg"
  description = "First Security Group"
  vpc_id      = aws_vpc.vpc_1.id

  ingress {
    description      = "Allow HTTP traffic"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "Allow SSH traffic"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    description      = "Allow all outbound traffic"
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "first_sg"
  }
}
